<resources>
    <string name="app_name">Deezer Music App</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="playlists">Playlists</string>
    <string name="add_to_playlist">Add To Playlist</string>
    <string name="remove_from_playlist">Remove From Playlist</string>
    <string name="back">Back</string>
    <string name="artist">Artist</string>
    <string name="track">Track</string>
    <string name="playlist">Playlist</string>
    <string name="duration">Duration</string>
    <string name="released">Released</string>
    <string name="BPM">BPM</string>
    <string name="gain">Gain</string>
    <string name="rank">Rank</string>
    <string name="album">Album</string>
    <string name="trackPosition">Track Position</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="rating">Rating</string>
    <string name="top_tracks">Top Tracks</string>
    <string name="genre">Genre</string>
    <string-array name="search_array">
        <item>Track</item>
        <item>Artist</item>
    </string-array>
    <string-array name="genre_array">
        <item>Select a Genre</item>
        <item>Pop</item>
        <item>Country</item>
        <item>Rap</item>
        <item>Hip Hop</item>
        <item>Rock</item>
        <item>Dance</item>
        <item>R+B</item>
        <item>Alternative</item>
        <item>Christian</item>
        <item>Electronic</item>
        <item>Folk</item>
        <item>Reggae</item>
        <item>Jazz</item>
        <item>Classical</item>
        <item>Metal</item>
        <item>Soul</item>
        <item>Blues</item>
        <item>Latin</item>
        <item>Kids</item>
    </string-array>
    <string name="title_activity_search_activty">SearchActivty</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
