<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/trackTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/track"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageView
        android:id="@+id/trackImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trackTitle"
        />
    <TextView
        android:id="@+id/trackArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/artist"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trackImage"/>
    <TextView
        android:id="@+id/trackAlbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/album"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trackArtist"/>
    <TextView
        android:id="@+id/trackReleased"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/released"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trackAlbum"/>
    <TextView
        android:id="@+id/trackPosition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trackPosition"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trackReleased"/>
    <TextView
        android:id="@+id/trackRank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rank"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trackPosition"/>
    <TextView
        android:id="@+id/trackDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trackRank"/>
</androidx.constraintlayout.widget.ConstraintLayout>