<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/remove_playlist_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_margin="16dp" />
    </FrameLayout>
    <LinearLayout
        android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <TextView
            android:id="@+id/thisPlaylistTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playlist"
            android:gravity="center"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/thisPlaylistDescription"
            />
        <TextView
            android:id="@+id/thisPlaylistDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="15sp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/thisPlaylistTitle"
            app:layout_constraintBottom_toTopOf="@id/thisPlaylistRating"
            />
        <TextView
            android:id="@+id/thisPlaylistRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textSize="15sp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/thisPlaylistDescription"
            app:layout_constraintBottom_toTopOf="@id/thisPlaylistGenre"
            />
        <TextView
            android:id="@+id/thisPlaylistGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:textSize="15sp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/thisPlaylistRating"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/plTrackRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/thisPlaylistGenre" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>