<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">
            <TextView
                android:id="@+id/trackTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/track"
                android:textSize="30sp"
                android:layout_margin="10dp"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <ImageView
                android:id="@+id/trackImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trackTitle"
                />
            <LinearLayout
                android:id="@+id/artistContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trackImage"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/artist"
                    android:textSize="20sp"
                    android:gravity="right"
                    android:layout_margin="5dp"
                    />
                <TextView
                    android:id="@+id/trackArtist"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/artist"
                    android:textSize="20sp"
                    android:gravity="left"
                    android:layout_margin="5dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/albumContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/artistContainer"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/album"
                    android:textSize="20sp"
                    android:gravity="right"
                    android:layout_margin="5dp"
                    />
                <TextView
                    android:id="@+id/trackAlbum"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/album"
                    android:textSize="20sp"
                    android:gravity="left"
                    android:layout_margin="5dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/releasedContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/albumContainer"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/released"
                    android:textSize="20sp"
                    android:gravity="right"
                    android:layout_margin="5dp"
                    />
                <TextView
                    android:id="@+id/trackReleased"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/released"
                    android:textSize="20sp"
                    android:gravity="left"
                    android:layout_margin="5dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/positionContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/releasedContainer"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/trackPosition"
                    android:textSize="20sp"
                    android:gravity="right"
                    android:layout_margin="5dp"
                    />
                <TextView
                    android:id="@+id/trackPosition"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/trackPosition"
                    android:textSize="20sp"
                    android:gravity="left"
                    android:layout_margin="5dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/rankContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/positionContainer"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/rank"
                    android:textSize="20sp"
                    android:gravity="right"
                    android:layout_margin="5dp"
                    />
                <TextView
                    android:id="@+id/trackRank"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/rank"
                    android:textSize="20sp"
                    android:gravity="left"
                    android:layout_margin="5dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/durationContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rankContainer"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/duration"
                    android:textSize="20sp"
                    android:gravity="right"
                    android:layout_margin="5dp"
                    />
                <TextView
                    android:id="@+id/trackDuration"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/duration"
                    android:textSize="20sp"
                    android:gravity="left"
                    android:layout_margin="5dp"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/addToPlaylistBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remove_from_playlist"
                android:layout_marginLeft="120dp"
                android:layout_marginRight="120dp"
                android:onClick="removeFromPlaylist"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/durationContainer"

                />

        </TableLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>